# SPlayer

./: .clang-format  .gitignore  CHANGELOG  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: audio_manager.cpp  audio_manager.h  config.h  demoman_controller.cpp  demoman_controller.h  gif_loader.cpp  gif_loader.h  main.cpp  visualizer.cpp  visualizer.h
